fix line break at activity log
the longer feedback-id is causing a line break and so the text overlaps
the following line. This removes 2 CSS-height-statements so the height
gets auto-adjusted by the browser.

--- a/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css
+++ b/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css
@@ -710,15 +710,11 @@ form.articleFeedbackv5-form-flyover input#articleFeedbackv5-noteflyover-note {
 }
 .articleFeedbackv5-activity-feedback {
 	padding: 10px 10px;
-	height: 29px;
 }
 .articleFeedbackv5-activity-feedback-permalink {
 	position: absolute;
 	top: 62px;
 	right: 22px;
-}
-.articleFeedbackv5-activity-pane {
-	height: 70px;
 }
 .articleFeedbackv5-activity-log-items {
 	height: 290px;
